Fullpage stripes spacing, layout fixes

--- a/app/styles/components/stripe.css
+++ b/app/styles/components/stripe.css
@@ -1,5 +1,5 @@
 .stripe {
-  padding: 1em 1em 1.5em;
+  padding: 2em 2em 2.5em 1em;
 }
 
 .stripe-call-to-action {
